ci: Update CircleCI config to use Yarn

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,20 +1,66 @@
-version: 2
+version: 2.1
 
 workflows:
-  version: 2
-  test:
+  lint:
     jobs:
-      - test
+      - prep-deps
+      - test-lint:
+          requires:
+            - prep-deps
+      - test-unit:
+          requires:
+            - prep-deps
+      - all-tests-pass:
+          requires:
+            - test-lint
+            - test-unit
 
 jobs:
-  test:
+  prep-deps:
     docker:
-      - image: circleci/node:8-browsers
+      - image: circleci/node:10
     steps:
       - checkout
       - run:
-          name: Install deps via npm
-          command: npm ci
+          name: Install deps
+          command: |
+            .circleci/scripts/deps-install.sh
       - run:
-          name: Run tests
-          command: npm test
+          name: Collect yarn install HAR logs
+          command: |
+            .circleci/scripts/collect-har-artifact.sh
+      - persist_to_workspace:
+          root: .
+          paths:
+          - node_modules
+          - build-artifacts
+
+  test-lint:
+    docker:
+      - image: circleci/node:10
+    steps:
+      - checkout
+      - attach_workspace:
+          at: .
+      - run:
+          name: Lint
+          command: yarn lint
+
+  test-unit:
+    docker:
+      - image: circleci/node:10
+    steps:
+      - checkout
+      - attach_workspace:
+          at: .
+      - run:
+          name: Unit tests
+          command: yarn test
+
+  all-tests-pass:
+    docker:
+      - image: circleci/node:10
+    steps:
+      - run:
+          name: All tests passed
+          command: echo 'Great success'
