--- a/package.json
+++ b/package.json
@@ -2,10 +2,18 @@
   "name": "nonce-tracker",
   "version": "1.0.1",
   "description": "nonce calculation used in metamask",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
+    "build": "tsc",
     "lint": "echo",
     "test": "mocha test/nonce-tracker-test.js"
+  },
+  "files": [
+    "dist/"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com:MetaMask/nonce-tracker.git"
   },
   "keywords": [
     "ethereum"
@@ -18,8 +26,10 @@
     "ethjs-query": "^0.3.8"
   },
   "devDependencies": {
+    "@types/node": "^14.14.7",
     "ethereumjs-util": "^6.1.0",
     "mocha": "^6.1.4",
+    "typescript": "^4.0.5",
     "xtend": "^4.0.1"
   }
 }
