--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "module": "CommonJS",
     "sourceMap": true,
     "strict": true,
-    "target": "es5",
+    "target": "ES2017",
     "esModuleInterop": true,
     "typeRoots": [
       "./node_modules/@types",
@@ -16,6 +16,7 @@
     "*.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "dist"
   ]
 }
