--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "await-semaphore": "^0.1.3",
+    "async-mutex": "^0.3.1",
     "ethjs-query": "^0.3.8"
   },
   "devDependencies": {
