--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.1.0",
   "description": "Transaction nonce calculation used in MetaMask.",
   "main": "dist/index.js",
+  "engines": {
+    "node": ">=12.0.0"
+  },
   "scripts": {
     "build": "rm -rf ./dist && tsc --project .",
     "test": "yarn build && mocha test/nonce-tracker-test.js",
