Update ESLint config
The ESLint config has been updated to v7.0.1. This includes the
addition of `prettier`, new lint scripts, and a variety of other rule
changes. Most changes were fixable using `yarn lint:fix`.

The only lint violation that required manual changes was the
"unexpected use of `beforeEach` for a single test" rule. Each use of
`beforeEach` for a single test was removed, with the relevant code
being moved directly into the test block.

This also required an adjustment to CI to ensure that the build occurs
before the linter is run. This is because the tests are linted, and
they import the `dist` directory.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,9 +4,13 @@ workflows:
   lint:
     jobs:
       - prep-deps
+      - test-build:
+          requires:
+            - prep-deps
       - test-lint:
           requires:
             - prep-deps
+            - test-build
       - test-unit:
           requires:
             - prep-deps
@@ -32,8 +36,23 @@ jobs:
       - persist_to_workspace:
           root: .
           paths:
-          - node_modules
-          - build-artifacts
+            - node_modules
+            - build-artifacts
+
+  test-build:
+    docker:
+      - image: circleci/node:12
+    steps:
+      - checkout
+      - attach_workspace:
+          at: .
+      - run:
+          name: Build project
+          command: yarn build
+      - persist_to_workspace:
+          root: .
+          paths:
+            - dist
 
   test-lint:
     docker:
