--- a/package.json
+++ b/package.json
@@ -2,45 +2,54 @@
   "name": "nonce-tracker",
   "version": "1.1.0",
   "description": "Transaction nonce calculation used in MetaMask.",
-  "main": "dist/index.js",
-  "engines": {
-    "node": ">=12.0.0"
-  },
-  "scripts": {
-    "build": "rm -rf ./dist && tsc --project .",
-    "test": "yarn build && mocha test/nonce-tracker-test.js",
-    "lint": "eslint . --ext ts,js,json",
-    "lint:fix": "yarn lint --fix"
-  },
-  "files": [
-    "dist/"
+  "keywords": [
+    "ethereum"
   ],
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com:MetaMask/nonce-tracker.git"
   },
-  "keywords": [
-    "ethereum"
-  ],
-  "author": "",
   "license": "ISC",
+  "author": "",
+  "main": "dist/index.js",
+  "files": [
+    "dist/"
+  ],
+  "scripts": {
+    "build": "rm -rf ./dist && tsc --project .",
+    "test": "yarn build && mocha test/nonce-tracker-test.js",
+    "lint:eslint": "eslint . --cache --ext js,ts",
+    "lint:misc": "prettier '**/*.json' '**/*.md' '!CHANGELOG.md' '**/*.yml' --ignore-path .gitignore",
+    "lint": "yarn lint:eslint && yarn lint:misc --check",
+    "lint:fix": "yarn lint:eslint --fix && yarn lint:misc --write"
+  },
   "dependencies": {
     "async-mutex": "^0.3.1",
     "ethjs-query": "^0.3.8"
   },
   "devDependencies": {
-    "@metamask/eslint-config": "^4.1.0",
+    "@metamask/eslint-config": "^7.0.1",
+    "@metamask/eslint-config-mocha": "^7.0.0",
+    "@metamask/eslint-config-nodejs": "^7.0.1",
+    "@metamask/eslint-config-typescript": "^7.0.0",
     "@types/node": "^14.14.7",
-    "@typescript-eslint/eslint-plugin": "^4.6.0",
-    "@typescript-eslint/parser": "^4.6.0",
-    "eslint": "^7.12.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-json": "^2.1.1",
+    "@typescript-eslint/eslint-plugin": "^4.28.3",
+    "@typescript-eslint/parser": "^4.28.3",
+    "eslint": "^7.30.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-mocha": "^8.1.0",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "eth-block-tracker": "^4.4.3",
     "ethereumjs-util": "^6.1.0",
     "mocha": "^8.2.1",
-    "typescript": "^4.0.5",
+    "prettier": "^2.2.1",
+    "prettier-plugin-packagejson": "^2.2.11",
+    "typescript": "^4.0.7",
     "xtend": "^4.0.1"
+  },
+  "engines": {
+    "node": ">=12.0.0"
   }
 }
