--- a/.github/workflows/create-release-pr.yml
+++ b/.github/workflows/create-release-pr.yml
@@ -8,11 +8,12 @@ on:
         default: 'main'
         required: true
       release-type:
-        description: 'A SemVer version diff, i.e. major, minor, or patch. Mutually exclusive with "release-version".'
-        required: false
+        description: "minor"
+        required: true
+        default: 'patch'        
       release-version:
-        description: 'A specific version to bump to. Mutually exclusive with "release-type".'
-        required: false
+        description: '1.1'
+        required: true
 
     
 
