--- a/.github/workflows/create-release-pr.yml
+++ b/.github/workflows/create-release-pr.yml
@@ -13,7 +13,7 @@ on:
         default: 'patch'        
       release-version:
         description: '1.1'
-        required: true
+        required: false
 
     
 
