--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "lint:fix": "yarn lint:eslint --fix && yarn lint:misc --write"
   },
   "dependencies": {
-    "async-mutex": "^0.3.1",
-    "ethjs-query": "^0.3.8"
+    "@ethersproject/providers": "^5.7.2",
+    "async-mutex": "^0.3.1"
   },
   "devDependencies": {
     "@metamask/eslint-config": "^10.0.0",
