ci: disable linting of changelog since there is none

--- a/.github/workflows/build-lint-test.yml
+++ b/.github/workflows/build-lint-test.yml
@@ -59,12 +59,13 @@ jobs:
           cache: 'yarn'
       - run: yarn --immutable --immutable-cache --ignore-engines
       - run: yarn lint
-      - name: Validate RC changelog
-        if: ${{ startsWith(github.head_ref, 'release/') }}
-        run: yarn auto-changelog validate --rc
-      - name: Validate changelog
-        if: ${{ !startsWith(github.head_ref, 'release/') }}
-        run: yarn auto-changelog validate
+      # TODO: Enable once CHANGELOG.md is in place
+      #- name: Validate RC changelog
+      #  if: ${{ startsWith(github.head_ref, 'release/') }}
+      #  run: yarn auto-changelog validate --rc
+      #- name: Validate changelog
+      #  if: ${{ !startsWith(github.head_ref, 'release/') }}
+      #  run: yarn auto-changelog validate
       - name: Require clean working directory
         shell: bash
         run: |
