--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com:MetaMask/nonce-tracker.git"
+    "url": "https://github.com/MetaMask/nonce-tracker.git"
   },
   "license": "ISC",
   "author": "",
