--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ workflows:
 jobs:
   prep-deps:
     docker:
-      - image: circleci/node:14
+      - image: cimg/node:18.18
     steps:
       - checkout
       - run:
@@ -41,7 +41,7 @@ jobs:
 
   test-build:
     docker:
-      - image: circleci/node:14
+      - image: cimg/node:18.18
     steps:
       - checkout
       - attach_workspace:
@@ -56,7 +56,7 @@ jobs:
 
   test-lint:
     docker:
-      - image: circleci/node:14
+      - image: cimg/node:18.18
     steps:
       - checkout
       - attach_workspace:
@@ -67,7 +67,7 @@ jobs:
 
   test-unit:
     docker:
-      - image: circleci/node:14
+      - image: cimg/node:18.18
     steps:
       - checkout
       - attach_workspace:
@@ -78,7 +78,7 @@ jobs:
 
   all-tests-pass:
     docker:
-      - image: circleci/node:14
+      - image: cimg/node:18.18
     steps:
       - run:
           name: All tests passed
