migrate from yarnv1 to yarnv3

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,13 @@ temp
 
 # ESLint
 .eslintcache
+
+# Yarn v3 files (w/o zero-install)
+# https://yarnpkg.com/getting-started/qa#which-files-should-be-gitignored
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
