--- a/.github/workflows/build-lint-test.yml
+++ b/.github/workflows/build-lint-test.yml
@@ -15,7 +15,7 @@ jobs:
           node-version-file: '.nvmrc'
           cache: 'yarn'
       - name: Install Yarn dependencies
-        run: yarn --immutable --ignore-engines
+        run: yarn --immutable
 
   build:
     name: Build
@@ -32,7 +32,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'yarn'
-      - run: yarn --immutable --immutable-cache --ignore-engines
+      - run: yarn --immutable
       - run: yarn build
       - name: Require clean working directory
         shell: bash
@@ -57,7 +57,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'yarn'
-      - run: yarn --immutable --immutable-cache --ignore-engines
+      - run: yarn --immutable
       - run: yarn lint
       # TODO: Enable once CHANGELOG.md is in place
       #- name: Validate RC changelog
@@ -89,7 +89,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'yarn'
-      - run: yarn --immutable --immutable-cache --ignore-engines
+      - run: yarn --immutable
       - run: yarn test
       - name: Require clean working directory
         shell: bash
