--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "rm -rf ./dist && tsc --project .",
     "test": "yarn build && mocha test/nonce-tracker-test.js",
     "lint:eslint": "eslint . --cache --ext js,ts",
-    "lint:misc": "prettier '**/*.json' '**/*.md' '!CHANGELOG.md' '**/*.yml' --ignore-path .gitignore",
+    "lint:misc": "prettier '**/*.json' '**/*.md' '!CHANGELOG.md' '**/*.yml' '!.yarnrc.yml' --ignore-path .gitignore",
     "lint": "yarn lint:eslint && yarn lint:misc --check",
     "lint:fix": "yarn lint:eslint --fix && yarn lint:misc --write"
   },
@@ -50,6 +50,7 @@
     "typescript": "^4.0.7",
     "xtend": "^4.0.1"
   },
+  "packageManager": "yarn@3.6.3",
   "engines": {
     "node": "^14.21 || ^16.20 || ^18.16 || >=20"
   }
