--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -9,6 +9,8 @@ logFilters:
 nodeLinker: node-modules
 
 plugins:
+  - path: .yarn/plugins/@yarnpkg/plugin-allow-scripts.cjs
+    spec: 'https://raw.githubusercontent.com/LavaMoat/LavaMoat/main/packages/yarn-plugin-allow-scripts/bundles/@yarnpkg/plugin-allow-scripts.js'
   - path: .yarn/plugins/@yarnpkg/plugin-constraints.cjs
     spec: '@yarnpkg/plugin-constraints'
 
