--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "async-mutex": "^0.3.1"
   },
   "devDependencies": {
+    "@lavamoat/allow-scripts": "^2.5.1",
+    "@lavamoat/preinstall-always-fail": "^1.0.3",
     "@metamask/eslint-config": "^10.0.0",
     "@metamask/eslint-config-mocha": "^10.0.0",
     "@metamask/eslint-config-nodejs": "^10.0.0",
@@ -50,8 +52,15 @@
     "typescript": "^4.0.7",
     "xtend": "^4.0.1"
   },
-  "packageManager": "yarn@3.6.3",
   "engines": {
     "node": "^14.21 || ^16.20 || ^18.16 || >=20"
-  }
+  },
+  "lavamoat": {
+    "allowScripts": {
+      "@lavamoat/preinstall-always-fail": false,
+      "ethereumjs-util>keccak": false,
+      "ethereumjs-util>secp256k1": false
+    }
+  },
+  "packageManager": "yarn@3.6.3"
 }
