--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@ethersproject/providers": "^5.7.2",
+    "@metamask/eth-json-rpc-provider": "^2.3.0",
     "async-mutex": "^0.3.1"
   },
   "devDependencies": {
