--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "lint:fix": "yarn lint:eslint --fix && yarn lint:misc --write"
   },
   "dependencies": {
-    "@ethersproject/providers": "^5.7.2",
     "@metamask/eth-json-rpc-provider": "^2.3.0",
+    "@metamask/eth-query": "^4.0.0",
+    "@metamask/utils": "^8.2.1",
     "async-mutex": "^0.3.1"
   },
   "devDependencies": {
