--- a/package.json
+++ b/package.json
@@ -53,6 +53,9 @@
     "typescript": "^4.0.7",
     "xtend": "^4.0.1"
   },
+  "peerDependencies": {
+    "@metamask/eth-block-tracker": ">=9"
+  },
   "engines": {
     "node": "^16.20 || ^18.16 || >=20"
   },
