--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@metamask/eslint-config-mocha": "^10.0.0",
     "@metamask/eslint-config-nodejs": "^10.0.0",
     "@metamask/eslint-config-typescript": "^10.0.0",
+    "@metamask/eth-block-tracker": "^9.0.3",
     "@types/node": "^16.18.59",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
@@ -45,13 +46,15 @@
     "eslint-plugin-mocha": "^10.1.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eth-block-tracker": "^8.1.0",
     "ethereumjs-util": "^6.1.0",
     "mocha": "^9.2.2",
     "prettier": "^2.7.1",
     "prettier-plugin-packagejson": "^2.2.11",
     "typescript": "^4.0.7",
     "xtend": "^4.0.1"
+  },
+  "peerDependencies": {
+    "@metamask/eth-block-tracker": ">=9"
   },
   "engines": {
     "node": "^16.20 || ^18.16 || >=20"
